<resources>
    <string name="app_name">HairApp</string>

    <string name="care">Pielęgnacje</string>
    <string name="products">Produkty</string>
    <string name="statistics">Statystyki</string>
    <string name="settings">Ustawienia</string>
    <string name="steps">Korki</string>

    <string name="name">Nazwa</string>
    <string name="manufacturer">Producent</string>
    <string name="type">Typ</string>
    <string name="emollients">Emolienty</string>
    <string name="humectants">Humektanty</string>
    <string name="proteins">Proteiny</string>
    <string name="application">Zastosowanie</string>
    <string name="save">Zapisz</string>
    <string name="product">Produkt</string>
    <string name="type_not_specified">Nie określono typu</string>
    <string name="application_not_specified">Nie określono zastosowania</string>
    <string name="select_application">Wybierz zastosowanie</string>
    <string name="select_type">Wybierz typ</string>
    <string name="confirm_delete">Potwierdź usunięcie</string>

    <!--ProductActivity-->
    <string name="product_activity_confirm_delete_message">Wybrany produkt zostanie usunięty. Czy chcesz kontynuować?</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--CareActivity-->
    <string name="care_activity_confirm_delete_message">Wybrana pielęgnacja zostanie usunięta. Czy chcesz kontynuować?</string>
    <string name="care_activity_confirm_delete_step_message">Wybrany krok zostanie usunięty z pielęgnacji. Czy chcesz kontynuować?</string>

    <!--CareSchema-->
    <string name="care_schema_info_message">Zdefiniuj schemat kroków dla swojej pielęgnacji</string>
    <string name="care_schema_confirm_delete_message">Wybrany schemat zostanie usunięty. Czy chcesz kontynuować?</string>
    <string name="care_schema_confirm_delete_step_message">Wybrany krok zostanie usunięty ze schematu pielęgnacji. Czy chcesz kontynuować?</string>
    <string name="name_your_schema">Nazwij swój schemat</string>
    <string name="change_care_schema_name">Zmień nazwę schematu</string>

    <!--PehBalance-->
    <string name="last_week">Ostatni tydzień</string>
    <string name="last_two_weeks">Ostatnie dwa tygodnie</string>
    <string name="last_three_weeks">Ostatnie trzy tygodnie</string>
    <string name="last_month">Ostatni miesiąc</string>
    <string name="last_two_months">Ostatnie dwa miesiące</string>
    <string name="last_three_months">Ostatnie trzy miesiace</string>
    <string name="all">Wszystkie</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="letter_h">H</string>
    <string name="letter_e">E</string>
    <string name="letter_p">P</string>
    <string name="date">Data</string>
    <string name="method">Metoda</string>
    <string name="add_photo">Dodaj zdjęcie</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="no_products_selected">Nie wybrano produktów</string>
    <string name="products_proportion">Proporcje produktów</string>
    <string name="notes">Notatki</string>
    <string name="product_type">Typ produktu</string>
    <string name="product_application">Zastosowanie produktu</string>
    <string name="no_products">Nie dodano produktów</string>
    <string name="section_name">Nazwa sekcji</string>
    <string name="care_notes_hint">Zapisz swoje notatki, uwagi, obserwacje …</string>
    <string name="confirm">Zatwierdź</string>
    <string name="discard">Odrzuć</string>
    <string name="select_product">Wybierz produkt</string>
    <string name="peh_balance">Równowaga PEH</string>
    <string name="num_of_last_month_cares">Liczba zapisanych pielęgnacji</string>
    <string name="avg_days_interval_between_cares">Liczba dni między pięlęgnacjami</string>
    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="cares">Pielęgnacje</string>
    <string name="stats">Statystyki</string>
    <string name="more">Więcej</string>
    <string name="ranking">Ranking</string>
    <string name="add">Dodaj</string>
    <string name="last_care">Ostatnia pielęgnacja</string>
    <string name="days_ago">Dni temu</string>
    <string name="photos">Zdjęcia</string>
    <string name="new_care">Nowa pielęgnacja</string>
    <string name="save_cares">Zapisuj pielęgnacje</string>
    <string name="new_product">Nowy produkt</string>
    <string name="schemas">Schematy</string>
    <string name="new_care_schema">Nowy schemat pielęgnacji</string>
    <string name="peh">PEH</string>
    <string name="title_care_schema_details_dynamic">Module Title</string>

</resources>