<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    app:cardBackgroundColor="@color/color_background"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/view_products_proportion_humectants"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_humectants"
            android:gravity="center"
            android:text="@string/letter_h"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_products_proportion_emollients"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_emollients"
            android:gravity="center"
            android:text="@string/letter_e"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_products_proportion_proteins"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_proteins"
            android:gravity="center"
            android:text="@string/letter_p"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/color_white"
            android:textStyle="bold" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>