<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="controller"
            type="com.example.hairapp.page_product.ProductActivity" />

        <variable
            name="viewModel"
            type="com.example.hairapp.page_product.ProductViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.hairapp.views.ToolbarView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:onNavigationClick="@{() -> controller.onBackPressed()}"
                app:title="@string/product" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_background"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/page_padding_horizontal"
                android:paddingTop="@dimen/page_padding_top"
                android:paddingBottom="@dimen/page_padding_bottom">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/color_transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_dotted_border">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcUri="@{viewModel.productPhoto}" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/txv_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_margin_top"
                    android:text='@{viewModel.productName, default="Nazwa produktu"}'
                    android:textAppearance="@style/TextAppearance.App.PageTitle" />

                <TextView
                    android:id="@+id/txv_product_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text='@{viewModel.productManufacturer, default=Producent}'
                    android:textAppearance="@style/TextAppearance.App.PageSubtitle"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/box_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_margin_top">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_edit"
                        style="@style/Widget.App.Button.Secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> controller.editProduct()}"
                        android:text="@string/edit"
                        app:icon="@drawable/ic_round_edit_24" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_delete"
                        style="@style/Widget.App.Button.Secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> controller.deleteProduct()}"
                        android:text="@string/delete"
                        app:icon="@drawable/ic_round_delete_24" />
                </LinearLayout>

                <TextView
                    android:id="@+id/section_title_product_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_margin_top"
                    android:text="@string/product_type"
                    android:textAppearance="@style/TextAppearance.App.SectionTitle" />

                <TextView
                    android:id="@+id/txv_type_not_specified"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_body_margin_top"
                    android:text="@string/type_not_specified"
                    android:textAppearance="@style/TextAppearance.App.BodyTertiary"
                    app:visibleOrGone="@{viewModel.typeNotSpecified}" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_body_margin_top">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humectants"
                        app:chipBackgroundColor="@color/color_humectants"
                        app:visibleOrGone="@{viewModel.humectants}" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emollients"
                        app:chipBackgroundColor="@color/color_emollients"
                        app:visibleOrGone="@{viewModel.emollients}" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proteins"
                        app:chipBackgroundColor="@color/color_proteins"
                        app:visibleOrGone="@{viewModel.proteins}" />
                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_margin_top"
                    android:text="@string/product_application"
                    android:textAppearance="@style/TextAppearance.App.SectionTitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_body_margin_top"
                    android:text="@string/application_not_specified"
                    android:textAppearance="@style/TextAppearance.App.BodyTertiary"
                    app:visibleOrGone="@{viewModel.applicationNotSpecified}" />

                <com.example.hairapp.views.ProductApplicationsView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_body_margin_top"
                    app:items="@{viewModel.applications}"
                    app:itemsSelectable="false" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>