<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="controller"
            type="com.example.hairapp.page_product_form.ProductFormActivity" />

        <variable
            name="viewModel"
            type="com.example.hairapp.page_product_form.ProductFormViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".page_product_form.ProductFormActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.hairapp.views.ToolbarView
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:onNavigationClick="@{() -> controller.onBackPressed()}"
                app:optionsMenu="@menu/save"
                app:title="Nowy produkt" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_background"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/page_padding_horizontal"
                android:paddingTop="@dimen/page_padding_top"
                android:paddingBottom="@dimen/page_padding_bottom">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_dotted_border"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:onClick="@{() -> controller.takePhoto()}">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcUri="@{viewModel.productPhoto}" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_margin_top"
                    android:layout_marginBottom="@dimen/field_margin_bottom"
                    android:hint="@string/name"
                    app:fieldError="@{viewModel.productNameError}"
                    app:startIconDrawable="@drawable/ic_round_title_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etx_product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:text="@={viewModel.productName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.App.TextInput.Exposed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/manufacturer"
                    app:startIconDrawable="@drawable/ic_round_local_offer_24">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/etx_manufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:text="@={viewModel.productManufacturer}"
                        app:items="@{viewModel.savedManufacturers}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_margin_top">

                    <ImageView
                        android:id="@+id/section_icon_product_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_round_label_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/text_color_primary" />

                    <TextView
                        android:id="@+id/section_title_product_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/section_title_margin_start"
                        android:text="@string/product_type"
                        android:textAppearance="@style/TextAppearance.App.SectionTitle"
                        app:layout_constraintBottom_toBottomOf="@id/section_icon_product_type"
                        app:layout_constraintBottom_toTopOf="@id/chip_group_type"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@id/section_icon_product_type"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/section_body_margin_top"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/section_title_product_type"
                        app:singleSelection="false">

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.humectants}"
                            android:text="@string/humectants"
                            app:chipBackgroundColor="@color/chip_humectant_bg"
                            app:chipStrokeColor="@color/color_humectants" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.emollients}"
                            android:text="@string/emollients"
                            app:chipBackgroundColor="@color/chip_emollient_bg"
                            app:chipStrokeColor="@color/color_emollients" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.proteins}"
                            android:text="@string/proteins"
                            app:chipBackgroundColor="@color/chip_protein_bg"
                            app:chipStrokeColor="@color/color_proteins" />
                    </com.google.android.material.chip.ChipGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_margin_top">

                    <ImageView
                        android:id="@+id/section_icon_product_application"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_round_label_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/text_color_primary" />

                    <TextView
                        android:id="@+id/section_title_product_application"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/section_title_margin_start"
                        android:text="@string/product_application"
                        android:textAppearance="@style/TextAppearance.App.SectionTitle"
                        app:layout_constraintBottom_toBottomOf="@id/section_icon_product_application"
                        app:layout_constraintBottom_toTopOf="@id/chip_group_product_application"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/section_icon_product_application"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.example.hairapp.views.ProductApplicationsView
                        android:id="@+id/chip_group_product_application"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/section_body_margin_top"
                        app:items="@{viewModel.productApplicationOptions}"
                        app:itemsSelectable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/section_title_product_application"
                        app:selectedItems="@={viewModel.productApplications}" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
